# 5G_ADSB_UAV_sim

./: CMakeLists.txt  README.md
include/: GeodeticConverter.h  environment.h  gen_kalman_filter.h  pyhelper.h  quad_control.h  quad_cvo_manager.h  quad_wp_manager.h  quadrotor.h  uatModel.h  vehicle.h  waypoint_generator.h
include/WattValues/: hundreth_watt.txt  twenty_watt.txt
launch/: run.launch
lib/adsb_research/: Grapher_Gif.py  JobScript  JobScript.py  JonathanBarrettUAT.py  OldJonathanMainSim.py  README.md  UATOriginal.py  UAT_Model.py  UAT_Model2.py  UAT_Model3.py  Vehicle.py  VehicleJon.py  aToB_main_sim.py  main_sim_repeated_msos.py  main_sim_standard_model.py  new_main_sim.py  openLogFiles.py  position_generator.py  sim_jaron_test.py  test.py
lib/adsb_research/Vehicles/: Vehicle.py  Vehicle_UAT.py
lib/adsb_research/mso/: Grapher.py  MsoCalculator.py  MsoHandler.py  Positions.csv  UAT.py  Vehicle.py  position_generator.py  propagation_param.py
lib/adsb_research/notNeeded/: PING20_log_5_2020-07-23T15-00-43Z_Ownship_Messages.csv  PING20_log_5_2020-07-23T15-00-43Z_Traffic_Reports.csv  PING20_log_6_2020-07-23T15-10-25Z_Ownship_Messages.csv  PING20_log_6_2020-07-23T15-10-25Z_Traffic_Reports.csv  PING25_log_5_2020-07-23T15-00-44Z_Ownship_Messages.csv  PING25_log_5_2020-07-23T15-00-44Z_Traffic_Reports.csv  PING27_log_6_2020-07-23T15-00-43Z_Ownship_Messages.csv  PING27_log_6_2020-07-23T15-00-43Z_Traffic_Reports.csv  PING27_log_7_2020-07-23T15-10-25Z_Ownship_Messages.csv  PING27_log_7_2020-07-23T15-10-25Z_Traffic_Reports.csv  PING30_log_5_2020-07-23T15-00-43Z_Ownship_Messages.csv  PING30_log_5_2020-07-23T15-00-43Z_Traffic_Reports.csv  PING30_log_6_2020-07-23T15-12-31Z_Ownship_Messages.csv  PING30_log_6_2020-07-23T15-12-31Z_Traffic_Reports.csv  job_script_writer.py  msoCalculations.py  ned_to_geodetic_with_noise.py  propagationParam.py  scatterPlot.py  scatterPlotCalcTraj.py  scatterPlotRandom.py  scatterPlotSingleMSO.py  scatterPlotTrajectory.py  swap.py  tanner_fig.py  test.py  testingDistanceStuff.py  vehicle2.py
lib/adsb_research/notNeeded/OldSavedData/: cleaningFile.py  collisions_per_sec1400V30S  collisions_per_sec140V30S  collisions_per_sec20V_30S  (+1 more)
lib/adsb_research/positionHandlers/: PositionHandler.py  PositionHandler_Random.py  PositionHandler_Straight.py  PositionHandler_Zeros.py
lib/adsb_research/tracks/: five_aligned_formation_short.tracks  five_v_formation_short.tracks  get_hardware_tracks.py  small_tracks.tracks
lib/adsb_research/unsure/: Vehicle_gps.py  analyze_hardware_logs.py  analyze_hardware_logs_sql.py  compare_gps_normal_results.py  decode_probability_plot.py  decode_probability_plot_for_slides.py  process_console_output.py
lib/adsb_research/wattValues/: hundredth_watt_dict.py  one_watt_dict.py  ten_watt_dict.py  tenth_watt_dict.py  twentieth_watt_dict.py  twenty_watt_dict.py
lib/collision_vo/: CMakeLists.txt
lib/collision_vo/include/collision_vo/: admissible_velocities.h  buffer.h  collision_vo.h  convex_hull.h  min_solve.h  utils.h
lib/collision_vo/src/: admissible_velocities.cpp  buffer.cpp  collision_vo.cpp  convex_hull.cpp  min_solve.cpp  utils.cpp
lib/collision_vo/tests/: admissible_tests.cpp  buffer_test.cpp  collision_tests.cpp  convex_hull_tests.cpp  min_solve_tests.cpp  utils_tests.cpp
lib/common_cpp/: CMakeLists.txt
lib/common_cpp/include/common_cpp/: common.h  logger.h  measurement.h  progress_bar.h
lib/common_cpp/src/: unit_tests.cpp
lib/geometry/: CMakeLists.txt
lib/geometry/include/geometry/: cam.h
lib/geometry/src/: test.cpp
params/: cvo.yaml  fixed_wing1.yaml  fixed_wing2.yaml  fixed_wing3.yaml  fixed_wing4.yaml  quadrotor.yaml  sim.yaml  simTwo.yaml  waypoints1.yaml  waypoints2.yaml
scripts/: animation.py  calculate_VO.py  generate_waypoints.py  plot_exps.py  plot_monte.py  plot_states.py
src/: Monte_Carlo_sim_Position_Creator.cpp  admissible_vel_test.cpp  environment.cpp  gen_kalman_filter.cpp  main.cpp  monte_carlo_sim.cpp  quad_control.cpp  quad_cvo_manager.cpp  quad_wp_manager.cpp  quadrotor.cpp  uatModel.cpp  uav_sim_node.cpp  uav_sim_node.cpp.save
src/WattValues/: hundreth_watt.txt  one_watt.txt  ten_watt.txt  tenth_watt.txt  twentieth_watt.txt
srv/: VO.srv  Waypoints.srv
(+296 files in other folders)
